# erpnext_biotime

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
erpnext_biotime/: hooks.py  modules.txt
erpnext_biotime/biotime_integration/: biotime_integration.py
erpnext_biotime/config/: desktop.py  docs.py
erpnext_biotime/erpnext_biotime/doctype/biotime_checkins/: biotime_checkins.js  biotime_checkins.json  biotime_checkins.py  test_biotime_checkins.py
erpnext_biotime/erpnext_biotime/doctype/biotime_connector/: biotime_connector.js  biotime_connector.json  biotime_connector.py  test_biotime_connector.py
erpnext_biotime/erpnext_biotime/doctype/biotime_device/: biotime_device.js  biotime_device.json  biotime_device.py  biotime_device_list.js  test_biotime_device.py
erpnext_biotime/erpnext_biotime/doctype/biotime_settings/: biotime_settings.js  biotime_settings.json  biotime_settings.py  test_biotime_settings.py
erpnext_biotime/overrides/: employee_checkin.py
